# crustacean-wordle

./: Cargo.toml  README.md  TODO.md
data/: answerlist.txt  guesslist.txt
scripts/: filter.py  infuse_freq.py
src/: bitmask.rs  game.rs  main.rs  pattern.rs  strategy.rs  words.rs
